<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player_bg"
    tools:context=".MusicPlayer">

    <FrameLayout
        android:id="@+id/albumArtContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/musicPlayerImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/artboard_2"
            android:foreground="@drawable/gradient_overlay"
            app:shapeAppearanceOverlay="@style/roundedCornerShapeAlbumImageMusicPlayer" />



    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_arrow" />


    </LinearLayout>






    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addToListContainer"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/musicPlayerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/song_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/musicPlayerAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/album_name"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addToListContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-25dp"
        app:layout_constraintTop_toBottomOf="@id/albumArtContainer"
        >
        <ImageButton
            android:id="@+id/fvtPlayerBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/fvt_btn"
            android:src="@drawable/fav_btn_selector"
            app:layout_constraintTop_toBottomOf="@id/albumArtContainer"
            />

        <ImageButton
            android:id="@+id/addToListBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_to_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fvtPlayerBtn"
            app:layout_constraintTop_toBottomOf="@id/albumArtContainer"
            app:srcCompat="@drawable/add_to_playlist" />

    </LinearLayout>

    <!-- SWIPE UP HINT OVERLAY -->
    <LinearLayout
        android:id="@+id/lyricsHintContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToListContainer"
        app:layout_constraintBottom_toTopOf="@+id/timeDisplay"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="12dp"
        android:clickable="false"
        android:focusable="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lyricsHintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Swipe up for lyrics"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <!-- optional arrow icon if you have one -->
        <!--
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_up"
            android:layout_marginTop="4dp"/>
        -->
    </LinearLayout>

    <!-- TIME DISPLAY -->
    <RelativeLayout
        android:id="@+id/timeDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/lyricsHintContainer"
        >

        <TextView
            android:id="@+id/currentDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/song_duration"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/song_duration"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <!-- SEEKBAR -->
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeDisplay"
        app:layout_constraintBottom_toTopOf="@+id/controlButtonsLayout"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/seek_thumb" />

    <!-- CONTROL BUTTONS (Prev, Play/Pause, Next) -->
    <LinearLayout
        android:id="@+id/controlButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar">

        <ImageButton
            android:id="@+id/shuffleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/shuffle_song"
            android:scaleType="centerInside"
            android:src="@drawable/shuffle_btn" />

        <ImageButton
            android:id="@+id/ButtonPrev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/prev_play"
            android:scaleType="centerInside"
            android:src="@drawable/prev_btn" />

        <ImageButton
            android:id="@+id/ButtonPlayPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:background="@android:color/transparent"
            android:contentDescription="@string/pause_play"
            android:scaleType="centerInside"
            android:src="@drawable/pause_btn" />

        <ImageButton
            android:id="@+id/ButtonNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next_play"
            android:scaleType="centerInside"
            android:src="@drawable/next_btn" />

        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:scaleType="centerInside"
            android:src="@drawable/repeat_all" />
    </LinearLayout>


    <!-- LYRICS PANEL (hidden, slides up) -->
    <LinearLayout
        android:id="@+id/lyricsPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="#CC000000"
        android:padding="16dp"
        android:elevation="8dp">

        <TextView
            android:id="@+id/lyricsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lyrics"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lyricsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lyrics will appear here…"
                android:textColor="@android:color/white"
                android:lineSpacingExtra="2dp" />
        </ScrollView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>