<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:background="@drawable/top_rounded_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/by_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="10dp">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_marginHorizontal="15dp"
                android:text="@string/sortby_name" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/by_new_first"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="10dp">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_marginHorizontal="15dp"
                android:text="@string/sortby_date_new_on_top" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/by_old_first"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="10dp">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_marginHorizontal="15dp"
                android:text="@string/sortby_date_old_on_top" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/by_recently_added"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="10dp"
            android:paddingHorizontal="10dp">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_marginHorizontal="15dp"
                android:text="@string/sortby_recently_added" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>