<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/black"
    android:padding="0dp"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/small_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/bagel"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </LinearLayout>

        <RelativeLayout
            android:background="@drawable/gradient_bg_black"
            android:id="@+id/xyz"
            android:layout_width="match_parent"
            android:paddingHorizontal="10dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/shuffleHome"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/shuffle_btn"
                android:src="@drawable/shuffle2" />

            <TextView
                android:id="@+id/totalSongCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_toEndOf="@id/shuffleHome"
                android:gravity="center_vertical"
                android:text="@string/All_Songs" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/sortby" />


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_RV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp">


        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>